tests/ui/type-alias-impl-trait/reveal_local.stderr
error[E0391]: cycle detected when type-checking `not_good`
  --> $DIR/reveal_local.rs:12:5
   |
LL |     is_send::<Foo>();
   |     ^^^^^^^^^^^^^^^^
   |
   = note: ...which requires evaluating trait selection obligation `Foo: core::marker::Send`...
note: ...which requires computing type of opaque `Foo::{opaque#0}`...
  --> $DIR/reveal_local.rs:5:12
   |
LL | type Foo = impl Debug;
   |            ^^^^^^^^^^
   = note: ...which again requires type-checking `not_good`, completing the cycle
   = note: cycle used when running analysis passes on this crate
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error[E0283]: type annotations needed: cannot satisfy `Foo: Send`
  --> $DIR/reveal_local.rs:22:15
   |
LL |     is_send::<Foo>();
   |               ^^^
   |
   = note: cannot satisfy `Foo: Send`
note: required by a bound in `is_send`
  --> $DIR/reveal_local.rs:7:15
   |
LL | fn is_send<T: Send>() {}
   |               ^^^^ required by this bound in `is_send`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0283, E0391.
For more information about an error, try `rustc --explain E0283`.
